@@ -15,16 +15,15 @@
  */
 package se.idsec.signservice.security.sign.xml.impl;
 
-import java.security.SignatureException;
-import java.security.cert.X509Certificate;
-import java.util.List;
-
-import org.w3c.dom.Document;
-
 import lombok.extern.slf4j.Slf4j;
+import org.w3c.dom.Document;
 import se.idsec.signservice.security.sign.SignatureValidationResult;
 import se.idsec.signservice.security.sign.xml.XMLMessageSignatureValidator;
 import se.idsec.signservice.security.sign.xml.XMLSignatureLocation;
+
+import java.security.SignatureException;
+import java.security.cert.X509Certificate;
+import java.util.List;
 
 /**
  * Implementation of the {@link XMLMessageSignatureValidator} interface.
@@ -34,6 +33,12 @@ import se.idsec.signservice.security.sign.xml.XMLSignatureLocation;
  */
 @Slf4j
 public class DefaultXMLMessageSignatureValidator implements XMLMessageSignatureValidator {
+
+  /**
+   * Default constructor.
+   */
+  public DefaultXMLMessageSignatureValidator() {
+  }
 
   /** {@inheritDoc} */
   @Override
@@ -48,12 +53,12 @@ public class DefaultXMLMessageSignatureValidator implements XMLMessageSignatureV
     if (result.size() > 1) {
       throw new SignatureException("Document contains multiple Signature elements - use XPath expression");
     }
-    if (result.get(0).isSuccess()) {
-      log.debug("Signature on XML message successfully validated: {}", result.get(0));
+    if (result.getFirst().isSuccess()) {
+      log.debug("Signature on XML message successfully validated: {}", result.getFirst());
     }
     else {
-      log.info("Signature validation on XML message failed: {}", result.get(0));
-      throw new SignatureException(result.get(0).getStatusMessage());
+      log.info("Signature validation on XML message failed: {}", result.getFirst());
+      throw new SignatureException(result.getFirst().getStatusMessage());
     }
 
   }
